<resources>
    <string name="app_name">Robotic Inspection</string>
    <string name="from_nose">From Nose</string>
    <string name="from_tail">From Tail</string>
    <string name="next">Next</string>
    <string name="CDist">Enter distance between Camera and A/C</string>
    <string name="COZoom">Enter Focal length</string>
    <string name="CDZoom">Enter Digital Zoom (Range: 1&#8122;2)</string>
    <string name="initialize_timeline">Initialize Timeline</string>
    <string name="geofence">Geofence</string>
    <string name="multiple_passes">Multiple passes</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="other_end_latitude">Enter other end Latitude(optional)</string>
    <string name="other_end_longitude">Enter other end Longitude(optional)</string>
    <string name="select_mission_type">Select Mission Type</string>
    <string name="complete">Complete</string>
    <string name="points_of_interest">Points of Interest</string>
    <string name="camera_test">Camera Test</string>
    <string name="nose">Nose</string>
    <string name="tail">Tail</string>
    <string name="left_wing">Left Wing</string>
    <string name="right_wing">Right Wing</string>
    <string name="aircraft_found">Aircraft found</string>
    <string name="drone_orientation_label">Drone orientation: </string>
    <string name="model_label">Model: </string>
    <string name="orientation_mode_label">Orientation Mode:</string>
    <string name="home_height_label">Home height: </string>
    <string name="flight_orientation_mode_label">Flight orientation mode: </string>
    <string name="local_course">Lock course using current heading</string>
    <string name="satellite_count_label">Satellite count: </string>
    <string name="flight_mode_label">Flight mode: </string>
    <string name="gps_signal_level_label">GPS signal level: </string>
    <string name="max_flight_radius_label">Max flight radius: </string>
    <string name="serial_number_label">Serial number: </string>
    <string name="homepoint_latitude_label">Homepoint latitude:</string>
    <string name="homepoint_longitude_label">Homepoint longitude:</string>
    <string name="home_latitude_label">Home latitude:</string>
    <string name="home_longitude_label">Home longitude:</string>
    <string name="test_application">Test Application</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="get_current_point">Get current point</string>
    <string name="place_at_end">Place the drone where you want it to end up and select Get Current Point</string>
    <string name="place_at_start">Place the drone where you to start the mission and select Get Current Point</string>
    <string name="homepoint_test">Home Point Test</string>
    <string name="download_data">Download data...</string>
    <string name="read_data">Read Data...</string>
    <string name="delete_data">Delete Data...</string>
    <string name="select_aircraft">Select previously loaded waypoint file:</string>
    <string name="task_select_task">Select task</string>
    <string name="task_load_waypoints">Load waypoint CSV file</string>
    <string name="task_inspect_aircraft">Run loaded waypoint mission</string>
    <string name="load_csv">Load CSV File</string>
    <string name="save_to_database">Save to database</string>
    <string name="cancel">Cancel</string>
    <string name="enter_heading">Enter aircraft heading</string>
</resources>
