<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".MissionOptionsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <Spinner
        android:id="@+id/spinner_aircraft_type"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
    </Spinner>
    <Spinner
        android:id="@+id/spinner_mission_type"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
    </Spinner>

    <LinearLayout
        android:id="@+id/media_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
    <CheckBox
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo" />
    <CheckBox
        android:id="@+id/video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video"
        />
</LinearLayout>
    <RadioGroup
        android:id="@+id/startgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_nose"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_tail"/>

    </RadioGroup>
    <CheckBox
        android:id="@+id/passes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/multiple_passes"
        />
    <CheckBox
        android:id="@+id/geofence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/geofence"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/next"/>

</RelativeLayout>
