<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".StartingPointFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_at_start"/>
            <EditText
                android:id="@+id/starting_point_latitude"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:hint="@string/latitude"
                android:inputType="text"
                android:importantForAutofill="no"
                tools:targetApi="o"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/starting_point_longitude"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:importantForAutofill="no"
                tools:targetApi="o"
                android:hint="@string/longitude"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/get_point_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_current_point"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/next"/>
</RelativeLayout>