<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".TaskSelectionFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_select_task"
            style="@style/Base.TextAppearance.AppCompat.Headline"/>
        <RadioGroup
            android:id="@+id/radioTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radioLoadCSV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/task_load_waypoints"/>
            <RadioButton
                android:id="@+id/radioRunMission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_inspect_aircraft"/>
        </RadioGroup>
    </LinearLayout>
    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/next"/>
</RelativeLayout>