<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".AircraftFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_aircraft"/>
            <Spinner
                android:id="@+id/spinner_aircraft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@android:style/Widget.Holo.Spinner"/>
            <EditText
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_heading"
                android:inputType="numberDecimal"
                tools:targetApi="o"
                android:importantForAutofill="no"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/download_data"/>
                <ProgressBar
                    android:id="@+id/progress_aircraft"
                    style="@style/Widget.AppCompat.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                </LinearLayout>

        </LinearLayout>
     <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/next"/>
</RelativeLayout>