<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".InitializeZonesFragment">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aircraft_found_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/check" />
            <TextView
                android:id="@+id/aircraft_found_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aircraft_found"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/drone_orientation_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/check"/>
            <TextView
                android:id="@+id/drone_orientation_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drone_orientation_label"/>
            <TextView
                android:id="@+id/drone_orientation_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/model_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/check"/>
            <TextView
                android:id="@+id/model_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model_label"/>
            <TextView
                android:id="@+id/model_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/home_height_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/check"/>
            <TextView
                android:id="@+id/home_height_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_height_label"/>
            <TextView
                android:id="@+id/home_height_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/flight_orientation_mode_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/check"/>
            <TextView
                android:id="@+id/flight_orientation_mode_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_orientation_mode_label"/>
            <TextView
                android:id="@+id/flight_orientation_mode_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lock_course_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/check"/>
            <TextView
                android:id="@+id/lock_course_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_course"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/satellite_count_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/check"/>
            <TextView
                android:id="@+id/satellite_count_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satellite_count_label"/>
            <TextView
                android:id="@+id/satellite_count_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/flight_mode_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/check"/>
            <TextView
                android:id="@+id/flight_mode_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_mode_label"/>
            <TextView
                android:id="@+id/flight_mode_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/gps_signal_level_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/check"/>
            <TextView
                android:id="@+id/gps_signal_level_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps_signal_level_label"/>
            <TextView
                android:id="@+id/gps_signal_level_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/max_flight_radius_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/check"/>
            <TextView
                android:id="@+id/max_flight_radius_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_flight_radius_label"/>
            <TextView
                android:id="@+id/max_flight_radius_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/serial_number_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/check"/>
            <TextView
                android:id="@+id/serial_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serial_number_label"/>
            <TextView
                android:id="@+id/serial_number_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/next"/>
</RelativeLayout>